--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,7 +13,7 @@ jobs:
         with:
           host: ${{ secrets.ESENIN_HOST }}
           username: ${{ secrets.ESENIN_USER }}
-          key: ${{ secrets.REGRU_ESENIN }}
+          key: ${{ secrets.ESENIN_KEY }}
           script: |
             cd ~/esenin-group/public_html/wp-content/themes/esenin-group
             git clone git@github.com:site100ru/esenin-group-wp.git .
